Adjustements for buttons on smaller devices + corrected some off paddings on qualifications

--- a/src/app/sections/footer/footer.component.scss
+++ b/src/app/sections/footer/footer.component.scss
@@ -14,6 +14,8 @@
         span {
             display: none;
         }
-        transform: translate(30px, -20px);
+
+        
+        transform: translate(30px, -70%);
     }
 }
